[package]
name = "s3_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
futures = "0.3"
tokio = { version = "1.13.0", features = ["full"] }
clap = { version = "4.2.1", features = ["derive"] }
